<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/all"
        android:entries="@array/notification_amount_list"
        android:entryValues="@array/notification_amount_list"
        android:key="@string/notification_amount_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:icon="@drawable/ic_more_24dp"
        android:summary="@string/notification_amount_summary"
        android:title="@string/notification_amount_title" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference
        android:key="@string/download_location_key"
        android:icon="@drawable/ic_folder_24dp"
        android:summary="@string/download_location_summary"
        android:title="@string/download_location_title">
    </Preference>

</PreferenceScreen>
